# TimeTracker

./: .gitignore  .ruff.toml  Dockerfile  LICENCE.md  README.md  build_image.py  compose.yaml  debug_docker_env.py  pyproject.toml  requirements.txt  run.py  test_db_path.py  test_time_formatting.py  timetrack.db
.github/: copilot-instructions.md
app/: app.py  config.py  models.py
app/routes/: admin.py  home.py  reports.py
app/service/: __init__.py  weekly_report_service.py
app/static/: base.css
app/templates/: base.html  error.html  footer.html  header.html  settings.html
app/templates/home/: add_entry.html  list_entries.html  main_entry.html
app/templates/reports/: weekly_report.html  weekly_settings.html
tests/: conftest.py  test_database.py  test_home.py  test_reports.py
